<resources>
    <string name="app_name">Kinte Chai</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="email_id">Email ID</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up!</string>
    <string name="or">Or</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email_id1">Email ID</string>
    <string name="todo3">TODO</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password1">Password</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="or1">Or</string>
    <string name="email_id2">Email ID</string>
    <string name="todo4">TODO</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In!</string>
    <string name="password_min_8_char">Password(min 8 char)</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string-array name="Bangladesh_City">
        <item>BAGERHAT</item>
        <item>BANDARBAN</item>
        <item>BARGUNA</item>
        <item>BARISAL</item>
        <item>BHOLA</item>
        <item>BOGRA</item>
        <item>BRAHMANBARIA</item>
        <item>CHANDPUR</item>
        <item>CHITTAGONG</item>
        <item>CHUADANGA</item>
        <item>COMILLA</item>
        <item>COX\'S BAZAR</item>
        <item>DHAKA</item>
        <item>DINAJPUR</item>
        <item>FARIDPUR</item>
        <item>FENI</item>
        <item>GAIBANDHA</item>
        <item>GAZIPUR</item>
        <item>GOPALGANJ</item>
        <item>HABIGANJ</item>
        <item>JAIPURHAT</item>
        <item>JAMALPUR</item>
        <item>JESSOR</item>
        <item>JHALAKATI</item>
        <item>JHENAIDAH</item>
        <item>KHAGRACHARI</item>
        <item>KHULNA</item>
        <item>KISHOREGANJ</item>
        <item>KURIGRAM</item>
        <item>KUSHTIA</item>
        <item>LAKSHMIPUR</item>
        <item>LALMONIRHAT</item>
        <item>MADARIPUR</item>
        <item>MAGURA</item>
        <item>MANIKGANG</item>
        <item>MEHERPUR</item>
        <item>MOULOVIBAZAR</item>
        <item>MUNSHIGANJ</item>
        <item>MYMENSINGH</item>
        <item>NAOGAON</item>
        <item>NARAIL</item>
        <item>NARAYANGANJ</item>
        <item>NARSINGDI</item>
        <item>NATORE</item>
        <item>NAWABGANJ</item>
        <item>NETRAKONA</item>
        <item>NILPHAMARI</item>
        <item>NOAKHALI</item>
        <item>PABNA</item>
        <item>PANCHAGARH</item>
        <item>PARBATTYA CHATTAGRAM</item>
        <item>PATUAKHALI</item>
        <item>PIROJPUR</item>
        <item>RAJBARI</item>
        <item>RAJSHAHI</item>
        <item>RANGPUR</item>
        <item>SATKHIRA</item>
        <item>SHARIATPUR</item>
        <item>SHERPUR</item>
        <item>SIRAJGANJ</item>
        <item>SUNJAMGANJ</item>
        <item>SYLHET</item>
        <item>TANGAIL</item>
        <item>THAKURGAON</item>
    </string-array>




</resources>
