<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/sign_up_close"
            android:layout_width="31dp"
            android:layout_height="24dp"
            android:layout_marginStart="364dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:padding="16dp"
            android:src="@mipmap/last_cross"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/sign_in_logo"
            android:layout_width="308dp"
            android:layout_height="172dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sign_in_email"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:backgroundTint="#4C77EF"
            android:ems="10"
            android:hint="@string/email_id"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColorHint="#4C77EF"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_logo"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/sign_in_password"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginTop="64dp"
            android:backgroundTint="#4C77EF"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColorHint="#4C77EF"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_email" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="188dp"
            android:layout_height="72dp"
            android:background="@color/colorAccent"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/btnWhite"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_password"
            app:layout_constraintVertical_bias="0.381" />

        <TextView
            android:id="@+id/sign_in_or"
            android:layout_width="37dp"
            android:layout_height="43dp"
            android:text="@string/or"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
            app:layout_constraintVertical_bias="0.107" />

        <TextView
            android:id="@+id/tv_already_have_an_account"
            android:layout_width="399dp"
            android:layout_height="63dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_or"
            app:layout_constraintVertical_bias="0.445" />

        <EditText
            android:id="@+id/sign_up_confirm_password"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:labelFor="@+id/sign_up_username"
            android:textColorHint="#4C77EF"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_password" />

        <EditText
            android:id="@+id/sign_up_username"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:backgroundTint="#4C77EF"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/user_name"
            android:textColor="#4C77EF"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_email" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>