<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/sign_in_close"
            android:layout_width="31dp"
            android:layout_height="24dp"
            android:layout_marginStart="332dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="2511dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:padding="16dp"
            android:src="@mipmap/last_cross"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.036" />

        <ImageView
            android:id="@+id/sign_in_logo"
            android:layout_width="308dp"
            android:layout_height="172dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sign_in_email"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="405dp"
            android:autofillHints=""
            android:backgroundTint="#4C77EF"
            android:ems="10"
            android:hint="@string/email_id"
            android:inputType="textEmailSubject"
            android:textColorHint="#4C77EF"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_logo"
            app:layout_constraintVertical_bias="0.0"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/sign_in_password"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:backgroundTint="#4C77EF"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#4C77EF"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_email"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/tv_dont_have_an_account"
            android:layout_width="365dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.588"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_or"
            app:layout_constraintVertical_bias="0.238" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="188dp"
            android:layout_height="72dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/btnWhite"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_password"
            app:layout_constraintVertical_bias="0.317" />

        <TextView
            android:id="@+id/sign_in_forget_password"
            android:layout_width="163dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:text="@string/forgot_password"
            android:textColor="#4C77EF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_password" />

        <TextView
            android:id="@+id/sign_in_or"
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/or"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
            app:layout_constraintVertical_bias="0.234" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>